added expected output and got rid of error message from notetaking

--- a/Regular_Expressions-INCLASS.ipynb
+++ b/Regular_Expressions-INCLASS.ipynb
@@ -829,26 +829,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hawkins, Derek\\tderek@codingtemple.com\\t(555) 555-5555\\tTeacher, Coding Temple\\t@derekhawkins\\n', 'Zhai, Mo\\tmozhai@codingtemple.com\\t(555) 555-5554\\tTeacher, Coding Temple\\n', 'Johnson, Joe\\tjoejohnson@codingtemple.com\\t\\tJohson, Joe\\n', 'Osterberg, Sven-Erik\\tgovernor@norrbotten.co.se\\t\\tGovernor, Norrbotten\\t@sverik\\n', ', Tim\\ttim@killerrabbit.com\\t\\tEnchanter, Killer Rabbit Cave\\n', 'Butz, Ryan\\tryanb@codingtemple.com\\t(555) 555-5543\\tCEO, Coding Temple\\t@ryanbutz\\n', 'Doctor, The\\tdoctor+companion@tardis.co.uk\\t\\tTime Lord, Gallifrey\\n', 'Exampleson, Example\\tme@example.com\\t555-555-5552\\tExample, Example Co.\\t@example\\n', 'Pael, Ripal\\tripalp@codingtemple.com\\t(555) 555-5553\\tTeacher, Coding Temple\\t@ripalp\\n', 'Vader, Darth\\tdarth-vader@empire.gov\\t(555) 555-4444\\tSith Lord, Galactic Empire\\t@darthvader\\n', 'Fernandez de la Vega Sanz, Maria Teresa\\tmtfvs@spain.gov\\t\\tFirst Deputy Prime Minister, Spanish Gov\\n']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[85], line 10\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(data)\n\u001b[1;32m      7\u001b[0m \u001b[39m# we have been using pattern.match() after creating pattern = re.compile()\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \n\u001b[1;32m      9\u001b[0m \u001b[39m# SYNTAX: re.match(pattern, string)\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m     result \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49mmatch(\u001b[39m'\u001b[39;49m\u001b[39mHawkins, Derek\u001b[39;49m\u001b[39m'\u001b[39;49m, data)\n\u001b[1;32m     11\u001b[0m     \u001b[39mprint\u001b[39m(result)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/re.py:191\u001b[0m, in \u001b[0;36mmatch\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    188\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmatch\u001b[39m(pattern, string, flags\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m    189\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Try to apply the pattern at the start of the string, returning\u001b[39;00m\n\u001b[1;32m    190\u001b[0m \u001b[39m    a Match object, or None if no match was found.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 191\u001b[0m     \u001b[39mreturn\u001b[39;00m _compile(pattern, flags)\u001b[39m.\u001b[39;49mmatch(string)\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected string or bytes-like object"
+      "Hawkins, Derek\tderek@codingtemple.com\t(555) 555-5555\tTeacher, Coding Temple\t@derekhawkins\n",
+      "Zhai, Mo\tmozhai@codingtemple.com\t(555) 555-5554\tTeacher, Coding Temple\n",
+      "Johnson, Joe\tjoejohnson@codingtemple.com\t\tJohson, Joe\n",
+      "Osterberg, Sven-Erik\tgovernor@norrbotten.co.se\t\tGovernor, Norrbotten\t@sverik\n",
+      ", Tim\ttim@killerrabbit.com\t\tEnchanter, Killer Rabbit Cave\n",
+      "Butz, Ryan\tryanb@codingtemple.com\t(555) 555-5543\tCEO, Coding Temple\t@ryanbutz\n",
+      "Doctor, The\tdoctor+companion@tardis.co.uk\t\tTime Lord, Gallifrey\n",
+      "Exampleson, Example\tme@example.com\t555-555-5552\tExample, Example Co.\t@example\n",
+      "Pael, Ripal\tripalp@codingtemple.com\t(555) 555-5553\tTeacher, Coding Temple\t@ripalp\n",
+      "Vader, Darth\tdarth-vader@empire.gov\t(555) 555-4444\tSith Lord, Galactic Empire\t@darthvader\n",
+      "Fernandez de la Vega Sanz, Maria Teresa\tmtfvs@spain.gov\t\tFirst Deputy Prime Minister, Spanish Gov\n",
+      "\n",
+      "<re.Match object; span=(0, 14), match='Hawkins, Derek'>\n"
      ]
     }
    ],
@@ -856,7 +856,8 @@
     "with open('files/names.txt') as file:\n",
     "    # this lets us do whatever we want to the file in this indentation\n",
     "    # anything after the indent, the file is closed automatically\n",
-    "    data = file.readlines()\n",
+    "    #data = file.readlines()\n",
+    "    data = file.read()\n",
     "    print(data)\n",
     "\n",
     "# we have been using pattern.match() after creating pattern = re.compile()\n",
@@ -875,19 +876,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[83], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m result \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49msearch(\u001b[39m\"\u001b[39;49m\u001b[39mVader, Darth\u001b[39;49m\u001b[39m\"\u001b[39;49m, data)\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(result)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/re.py:201\u001b[0m, in \u001b[0;36msearch\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msearch\u001b[39m(pattern, string, flags\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m    199\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Scan through string looking for a match to the pattern, returning\u001b[39;00m\n\u001b[1;32m    200\u001b[0m \u001b[39m    a Match object, or None if no match was found.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 201\u001b[0m     \u001b[39mreturn\u001b[39;00m _compile(pattern, flags)\u001b[39m.\u001b[39;49msearch(string)\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected string or bytes-like object"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(652, 664), match='Vader, Darth'>\n"
      ]
     }
    ],
@@ -905,19 +901,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[84], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m ans \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mwhat do u want to search for?\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m found \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49mfindall(ans, data)\n\u001b[1;32m      3\u001b[0m \u001b[39mif\u001b[39;00m found:\n\u001b[1;32m      4\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThese are the results: \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00mfound\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/re.py:241\u001b[0m, in \u001b[0;36mfindall\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    233\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfindall\u001b[39m(pattern, string, flags\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m    234\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Return a list of all non-overlapping matches in the string.\u001b[39;00m\n\u001b[1;32m    235\u001b[0m \n\u001b[1;32m    236\u001b[0m \u001b[39m    If one or more capturing groups are present in the pattern, return\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    239\u001b[0m \n\u001b[1;32m    240\u001b[0m \u001b[39m    Empty matches are included in the result.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 241\u001b[0m     \u001b[39mreturn\u001b[39;00m _compile(pattern, flags)\u001b[39m.\u001b[39;49mfindall(string)\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected string or bytes-like object"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the results: \n",
+      "['Hawkins, Derek', 'Teacher, Coding', 'Zhai, Mo', 'Teacher, Coding', 'Johnson, Joe', 'Johson, Joe', 'Osterberg, Sven', 'Governor, Norrbotten', 'Enchanter, Killer', 'Butz, Ryan', 'Doctor, The', 'Lord, Gallifrey', 'Exampleson, Example', 'Example, Example', 'Pael, Ripal', 'Teacher, Coding', 'Vader, Darth', 'Lord, Galactic', 'Sanz, Maria', 'Minister, Spanish']\n"
      ]
     }
    ],
@@ -1039,13 +1031,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Expected Output\n",
       "Abraham Lincoln\n",
       "\n",
       "Andrew P Garfield\n",
@@ -1077,6 +1070,7 @@
     "# last: same as first\n",
     "pattern = re.compile('(?P<first>[A-Z][a-zA-Z]+)\\s(?P<middle>[A-Z][a-zA-Z]*)?\\s?(?P<last>[A-Z][a-zA-Z]+)')\n",
     "\n",
+    "print(\"Expected Output\")\n",
     "for name in data:\n",
     "    match = pattern.match(name)\n",
     "    print(name) if match else print(\"None\")\n"
