added fullname group

--- a/Regular_Expressions-INCLASS.ipynb
+++ b/Regular_Expressions-INCLASS.ipynb
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1040,13 +1040,9 @@
      "text": [
       "Expected Output\n",
       "Abraham Lincoln\n",
-      "\n",
       "Andrew P Garfield\n",
-      "\n",
       "Connor Milliken\n",
-      "\n",
       "Jordan Alexander Williams\n",
-      "\n",
       "None\n",
       "None\n"
      ]
@@ -1068,12 +1064,13 @@
     "# first: starts with a capital letter, then has as many case-insensitive letters before a space\n",
     "# middle: optional. starts with a capital letter, then has as many (optional) case-insensitive letters before an optional space\n",
     "# last: same as first\n",
-    "pattern = re.compile('(?P<first>[A-Z][a-zA-Z]+)\\s(?P<middle>[A-Z][a-zA-Z]*)?\\s?(?P<last>[A-Z][a-zA-Z]+)')\n",
+    "pattern = re.compile('(?P<full>(?P<first>[A-Z][a-zA-Z]+)\\s(?P<middle>[A-Z][a-zA-Z]*)?\\s?(?P<last>[A-Z][a-zA-Z]+))')\n",
+    "\n",
     "\n",
     "print(\"Expected Output\")\n",
     "for name in data:\n",
     "    match = pattern.match(name)\n",
-    "    print(name) if match else print(\"None\")\n"
+    "    print(match.group('full')) if match else print(\"None\")\n"
    ]
   }
  ],
